--- a/404.html
+++ b/404.html
@@ -1,16 +1,8 @@
 <script>
-    switch (window.location.pathname) {
-        case '/':
-            window.location.replace('https://github.com/rizaldyaristyo');
-            break;
-        case '/spotify':
-            window.location.replace('https://open.spotify.com/user/31nepgq4lmxda2h7ccjybggo4mfu?si=d7ef464b7d9b4efb');
-            break;
-        case '/instagram':
-            window.location.replace('https://instagram.com/rizaldyaristyo');
-            break;
-        default:
-            window.location.replace('https://github.com/rizaldyaristyo');
-            break;
-    }
+    const y = {
+        '/': 'https://github.com/rizaldyaristyo',
+        '/spotify': 'https://open.spotify.com/user/31nepgq4lmxda2h7ccjybggo4mfu?si=d7ef464b7d9b4efb',
+        '/instagram': 'https://instagram.com/rizaldyaristyo',
+    };
+    const w=window.location,x=w.pathname;y.hasOwnProperty(x)?w.href=y[x]:w.href=y['/'];
 </script>
