added some lovely note viewable by cli users

--- a/404.html
+++ b/404.html
@@ -1,3 +1,11 @@
+<!-- 
+    Nuh Uh! You probably got ECONNRESET?
+    It's normal! because it's actually a deliberate 404 js redirect!
+    Checkout: https://github.com/rizaldyaristyo/rizaldyaristyo.github.io
+
+    Anyway these are my links below mapped neatly
+    have fun!
+ -->
 <script>
     const y = {
         '/': 'https://github.com/rizaldyaristyo',
