added spotify playlist to the shortener collection

--- a/404.html
+++ b/404.html
@@ -9,7 +9,10 @@
 <script>
     const y = {
         '/': 'https://github.com/rizaldyaristyo',
-        '/spotify': 'https://open.spotify.com/user/31nepgq4lmxda2h7ccjybggo4mfu?si=d7ef464b7d9b4efb',
+        '/spotify': 'https://open.spotify.com/user/31nepgq4lmxda2h7ccjybggo4mfu/playlists',
+        '/spotify/sambawhatever': 'https://open.spotify.com/playlist/5ozXCNHAXDgPd10XZUwooh?si=eef2954099974507',
+        '/spotify/selfbranding': 'https://open.spotify.com/playlist/5ozXCNHAXDgPd10XZUwooh?si=eef2954099974507',
+        '/github': 'https://www.linkedin.com/in/rizaldyaristyo',
         '/instagram': 'https://instagram.com/rizaldyaristyo',
     };
     const w=window.location,x=w.pathname;y.hasOwnProperty(x)?w.replace(y[x]):w.replace(y['/']);
